<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Caatinga Digital</string>
    <string name="action_settings">Settings</string>
    <string name="logo_equipe">Logo equipe</string>
    
    <!-- Home -->
	<string name="quiz">Quiz</string>
	<string name="forca">Forca</string>
	<string name="memoria">Memória</string>
	<string name="velha">Velha</string>
	<string name="rodape">Recife Gamers</string>
	
	<!-- Quiz -->
 <!-- Home screen -->
    <!-- Number of questions to be asked in this quiz -->
    <string name="number_of_questions">Número de questões:</string>
    <!-- Displayed on the button which begins the quiz when clicked -->
    <string name="start_quiz">Começar o Quiz</string>
    
    <!-- Displayed during the course of a quiz -->
    <!-- Question answered correctly -->
    <string name="answer_correct">Correto!</string>
    <!-- Question answered incorrectly -->
    <string name="answer_incorrect">Incorreto!</string>
    
    <!-- Displayed at the end of a quiz -->
    <!-- End of quiz header -->
    <string name="quiz_end_header">Fim do Quiz</string>
    <!-- Number of correct answers header -->
    <string name="correct_answers_header">Correto!</string>
    <!-- Number of incorrect answers header -->
    <string name="incorrect_answers_header">Incorreto</string>
    <!-- End of quiz accept button -->
    <string name="quiz_end_accept_button">Retornar para menu</string>
      <string name="quiz_recifense">Quiz da Caatinga</string>
      <string name="ranking">Visualizar Ranking</string>
    
    <!-- Error strings -->
    
    <!-- Invalid input for number of questions -->
    <string name="invalid_number_of_questions">Número de questões especificadas inválido!</string>
    <!-- Problem while loading the questions from the asset files -->
    <string name="question_reading_exception">Um problema aconteceu ao carregar uma questão</string>
	<!-- Number of strings that could not be parsed -->
	<plurals name="question_reading_parse_fail_number">
        <item quantity="one">1 questão não pode ser analisada.</item>
        <item quantity="other">%1$d questão não pode ser analisada</item>
    </plurals>

    
    <!-- Desafio -->
	<string name="desafiotela">Desafio</string>
	<string name="forca_lampiao">Forca da Caatinga</string>
	<string name="gameactivity">Desafio da Forca</string>
	<string name="title_activity_result">Resultado</string>
    
     
    <string name="jogo_da_velha">Jogo da Velha</string>
    <string name="jogador_1">Jogador 1</string>
    <string name="jogador_2">Jogador 2</string>
    <string name="come_ar_o_jogo">Começar o Jogo</string>
    <string name="title_activity_game">Jogo</string>
    <string name="title_activity_stats">Resultado</string>
    <string name="vencedor">Jogo empatado!</string>
    <string name="novo_jogo">Jogar novamente</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="player1">Jogador 1</string>
    <string name="player2">Jogador 2</string>
    <string name="empate">Empates</string>
    
    
      <string name="hello">Bem-vindo ao Caatinga da Memória!</string>
    <string name="menu_new_game">Novo Jogo</string>
    <string name="end_game">Sair</string>
    <string name="play_move">Jogar</string>
    <string name="play_again">Novo Jogo</string>
    <string name="scoreboard_text">Você acabou o jogo com %d tentativas!</string>
    <string name="feedback">0 / 0</string>
    <string name="menu_prefs">confi.</string>
    <string name="menu_prefss">Configuração</string>
    <string name="prefs">CONFIGURAÇÃO</string>
    <string name="sound_correct">Som para respostas corretas</string>
    <string name="sound_incorrect">Som para respostas erradas</string>
    <string name="save_prefs">Salve e volte para o menu</string>
    <string name="save_game">Salve e volte para o jogo</string>
    <string name="menu">Menu</string>
      <string name="memoria_cordel">Caatinga da Memória</string>
    
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_logo_quiz">Caatinga por Imagens</string>
     <string name="recife_img">Caatinga por Imagens - Quiz</string>
    <string name="title_activity_logo_answer">Resposta</string>
    
</resources>
